edit uploading picture now works, displaying photo on post show works, and slick slider is up but looks bad need to fix. To fix should look at how images get cropped when coming in

--- a/app/assets/stylesheets/posts.scss
+++ b/app/assets/stylesheets/posts.scss
@@ -24,3 +24,9 @@
 .adp-placemark {
   display: none;
 }
+
+.post-picture {
+  text-align: center;
+  max-height: 20vh !important;
+  width: auto;
+}
